force-app/main/default/objects/Nice_Calling_List_Disposition_Mapping__mdt/Nice_Calling_List_Disposition_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Nice Calling List Disposition Mapping</label>
    <pluralLabel>Nice Calling List Dispositions Mapping</pluralLabel>
</CustomObject>