force-app/main/default/objects/Nice_Calling_List_Disposition_Mapping__mdt/fields/Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Status__c</fullName>
    <label>Call Attempt Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>