force-app/main/default/objects/Nice_Calling_List_Disposition_Mapping__mdt/fields/Call_Disposition_L1__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_L1__c</fullName>
    <label>Call Disposition L1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>