force-app/main/default/objects/Nice_Calling_List_Disposition_Mapping__mdt/fields/CRM_Call_Disposition3__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Disposition3__c</fullName>
    <label>CRM Call Disposition3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>