force-app/main/default/objects/Nice_Calling_List_Disposition_Mapping__mdt/fields/Sub_Dispositions__c.field-meta.xml
<CustomField>
    <fullName>Sub_Dispositions__c</fullName>
    <label>Sub Dispositions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>