force-app/main/default/objects/Nice_Calling_List_Disposition_Mapping__mdt/fields/Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>Tag_Id__c</fullName>
    <label>Tag Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>