force-app/main/default/objects/Nice_Calling_List_Disposition_Mapping__mdt/listViews/Nice_Calling_List_Dispositions_Mapping.listView-meta.xml
<ListView>
    <fullName>Nice_Calling_List_Dispositions_Mapping</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Call_Disposition_L1__c</columns>
    <columns>Call_Disposition_L2__c</columns>
    <columns>Call_Disposition_L3__c</columns>
    <columns>Tag_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Nice Calling List Dispositions Mapping</label>
    <language>en_US</language>
</ListView>